--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,8 @@
-<app-title></app-title>
-<app-search-bar></app-search-bar>
+<dg-grid container>
+  <dg-grid-cell column-span="12">
+    <dg-row alignment="space-between">
+      <app-logo></app-logo>
+      <app-search-bar></app-search-bar>
+    </dg-row>
+  </dg-grid-cell>
+</dg-grid>
