--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,16 @@
 <mat-nav-list>
   <mat-list-item routerLink="blockchain">
-    Blockchain
+    <mat-icon matListIcon>timeline</mat-icon>
+    <span matLine>Blockchain</span>
   </mat-list-item>
 
   <mat-list-item routerLink="blocks">
-    TX / DS Blocks
+    <mat-icon matListIcon>list_alt</mat-icon>
+    <span matLine>TX / DS Blocks</span>
   </mat-list-item>
 
   <mat-list-item routerLink="transactions">
-    Transactions
+    <mat-icon matListIcon>swap_horiz</mat-icon>
+    <span matLine>Transactions</span>
   </mat-list-item>
 </mat-nav-list>
