--- a/src/app/components/outlet/outlet.component.html
+++ b/src/app/components/outlet/outlet.component.html
@@ -1,3 +1,2 @@
-<zil-layout-container>
-  <router-outlet></router-outlet>
-</zil-layout-container>
+<router-outlet hidden></router-outlet>
+<app-footer></app-footer>
