--- a/src/app/scenes/ds-block-detail/ds-block-detail.component.html
+++ b/src/app/scenes/ds-block-detail/ds-block-detail.component.html
@@ -1,32 +1,36 @@
-<mat-form-field>
-  <mat-label>Block #</mat-label>
-  <input matInput value="{{ dsBlock.header.blockNum }}" readonly>
-</mat-form-field>
+<zil-card>
+  <zil-card-content>
+    <mat-form-field>
+      <mat-label>Block #</mat-label>
+      <input matInput value="{{ dsBlock.header.blockNum }}" readonly>
+    </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Difficulty</mat-label>
-  <input matInput value="{{ dsBlock.header.difficulty }}" readonly>
-</mat-form-field>
+    <mat-form-field>
+      <mat-label>Difficulty</mat-label>
+      <input matInput value="{{ dsBlock.header.difficulty }}" readonly>
+    </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Leader Public Key</mat-label>
-  <input matInput value="{{ dsBlock.header.leaderPubKey }}" readonly>
-</mat-form-field>
+    <mat-form-field>
+      <mat-label>Leader Public Key</mat-label>
+      <input matInput value="{{ dsBlock.header.leaderPubKey }}" readonly>
+    </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Previous Hash</mat-label>
-  <input matInput value="{{ dsBlock.header.prevhash }}" readonly>
-</mat-form-field>
+    <mat-form-field>
+      <mat-label>Previous Hash</mat-label>
+      <input matInput value="{{ dsBlock.header.prevhash }}" readonly>
+    </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Timestamp</mat-label>
-  <input matInput value="{{ dsBlock.header.timestamp }}" readonly>
-</mat-form-field>
+    <mat-form-field>
+      <mat-label>Timestamp</mat-label>
+      <input matInput value="{{ dsBlock.header.timestamp }}" readonly>
+    </mat-form-field>
 
-<mat-form-field>
-  <mat-label>Signature</mat-label>
-  <input matInput value="{{ dsBlock.signature }}" readonly>
-</mat-form-field>
+    <mat-form-field>
+      <mat-label>Signature</mat-label>
+      <input matInput value="{{ dsBlock.signature }}" readonly>
+    </mat-form-field>
+  </zil-card-content>
+</zil-card>
 
 <mat-expansion-panel>
   <mat-expansion-panel-header>
