--- a/src/app/scenes/ds-block-detail/ds-block-detail.component.scss
+++ b/src/app/scenes/ds-block-detail/ds-block-detail.component.scss
@@ -1,11 +1,7 @@
-@import 'ui-kit';
+@import '~@datagazer/ui';
 
 :host {
-  @include zil-grid-column(start) {
-    padding: $large-gutter;
-  }
-
-  @include zil-card();
+  @include dg-column();
 }
 
 .mat-column {
