--- a/src/app/scenes/transaction-list/transaction-list.component.html
+++ b/src/app/scenes/transaction-list/transaction-list.component.html
@@ -1,49 +1,53 @@
-<table mat-table [dataSource]="transactions$ | async">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>#</th>
+<zil-card>
+  <zil-card-content>
+    <table mat-table [dataSource]="transactions$ | async">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>#</th>
 
-    <td mat-cell *matCellDef="let transaction">
-      <zil-link [routerLink]="transaction.id">{{ transaction.id }}</zil-link>
-    </td>
-  </ng-container>
+        <td mat-cell *matCellDef="let transaction">
+          <zil-link [routerLink]="transaction.id">{{ transaction.id }}</zil-link>
+        </td>
+      </ng-container>
 
-  <ng-container matColumnDef="timestamp">
-    <th mat-header-cell *matHeaderCellDef>Age</th>
+      <ng-container matColumnDef="timestamp">
+        <th mat-header-cell *matHeaderCellDef>Age</th>
 
-    <td mat-cell *matCellDef="let transaction">
-      {{ transaction.timestamp | timeAgo }}
-    </td>
-  </ng-container>
+        <td mat-cell *matCellDef="let transaction">
+          {{ transaction.timestamp | timeAgo }}
+        </td>
+      </ng-container>
 
-  <ng-container matColumnDef="addressFrom">
-    <th mat-header-cell *matHeaderCellDef>From</th>
+      <ng-container matColumnDef="addressFrom">
+        <th mat-header-cell *matHeaderCellDef>From</th>
 
-    <td mat-cell *matCellDef="let transaction">
-      <zil-link [routerLink]="['/address', transaction.addressFrom]">{{ transaction.addressFrom }}</zil-link>
-    </td>
-  </ng-container>
+        <td mat-cell *matCellDef="let transaction">
+          <zil-link [routerLink]="['/address', transaction.addressFrom]">{{ transaction.addressFrom }}</zil-link>
+        </td>
+      </ng-container>
 
-  <ng-container matColumnDef="addressTo">
-    <th mat-header-cell *matHeaderCellDef>To</th>
+      <ng-container matColumnDef="addressTo">
+        <th mat-header-cell *matHeaderCellDef>To</th>
 
-    <td mat-cell *matCellDef="let transaction">
-      <zil-link [routerLink]="['/address', transaction.addressTo]">{{ transaction.addressTo }}</zil-link>
-    </td>
-  </ng-container>
+        <td mat-cell *matCellDef="let transaction">
+          <zil-link [routerLink]="['/address', transaction.addressTo]">{{ transaction.addressTo }}</zil-link>
+        </td>
+      </ng-container>
 
-  <ng-container matColumnDef="value">
-    <th mat-header-cell *matHeaderCellDef>Value</th>
+      <ng-container matColumnDef="value">
+        <th mat-header-cell *matHeaderCellDef>Value</th>
 
-    <td mat-cell *matCellDef="let transaction">
-      {{ transaction.value | currency : 'ZIL' }}
-    </td>
-  </ng-container>
+        <td mat-cell *matCellDef="let transaction">
+          {{ transaction.value | currency : 'ZIL' }}
+        </td>
+      </ng-container>
 
-  <thead>
-    <tr mat-header-row *matHeaderRowDef="transactionColumns"></tr>
-  </thead>
+      <thead>
+        <tr mat-header-row *matHeaderRowDef="transactionColumns"></tr>
+      </thead>
 
-  <tbody>
-    <tr mat-row *matRowDef="let transaction; columns: transactionColumns"></tr>
-  </tbody>
-</table>
+      <tbody>
+        <tr mat-row *matRowDef="let transaction; columns: transactionColumns"></tr>
+      </tbody>
+    </table>
+  </zil-card-content>
+</zil-card>
