--- a/src/app/scenes/transaction-list/transaction-list.component.scss
+++ b/src/app/scenes/transaction-list/transaction-list.component.scss
@@ -1,9 +1,7 @@
-@import 'ui-kit';
+@import '~@datagazer/ui';
 
 :host {
-  @include zil-grid-column(start);
-
-  @include zil-card();
+  @include dg-column();
 }
 
 .mat-column {
