--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,29 @@
-$min-layout-width: 1024px;
-$max-layout-width: 1280px;
+@import '~@angular/material/theming';
 
-$layout-grid-columns: 12;
+$base-palette: (
+  default: #49c1bf,
+  lighter: #81f4f2,
+  darker: #00908f,
 
-$small-gutter: 16px;
-$large-gutter: 24px;
+  contrast: (
+    default: $light-primary-text,
+    lighter: $dark-primary-text,
+    darker: $light-primary-text
+  )
+);
 
-$border-radius: 4px;
+$theme: mat-light-theme(
+  mat-palette($base-palette, default, lighter, darker),
+  mat-palette($base-palette, default, lighter, darker)
+);
+
+$typography: mat-typography-config(
+  $display-4: mat-typography-level(96px, 1, 300),
+  $display-3: mat-typography-level(60px, 1, 300),
+  $display-2: mat-typography-level(48px, 1, 400),
+  $display-1: mat-typography-level(34px, 1, 400),
+  $headline: mat-typography-level(24px, 1, 400),
+  $title: mat-typography-level(20px, 1, 500)
+);
+
+$max-layout-width: 1024px;
