--- a/src/app/scenes/blockchain-info/blockchain-info.component.html
+++ b/src/app/scenes/blockchain-info/blockchain-info.component.html
@@ -1,15 +1,22 @@
 <dg-grid>
   <dg-grid-cell column-span="6">
     <zil-tile>
-      <zil-tile-title>Transaction # Trend</zil-tile-title>
-      <zil-tile-content zilLineChart [data]="(marketCharts$ | async)?.transactionNum"></zil-tile-content>
+      <zil-tile-title>Transaction Number</zil-tile-title>
+      <zil-tile-content zilLineChart [options]="(marketCharts$ | async)?.transactionNum"></zil-tile-content>
     </zil-tile>
   </dg-grid-cell>
 
   <dg-grid-cell column-span="6">
     <zil-tile>
-      <zil-tile-title>ZIL USD Price Trend</zil-tile-title>
-      <zil-tile-content zilLineChart [data]="(marketCharts$ | async)?.zilPrice"></zil-tile-content>
+      <zil-tile-title>Mining Difficulty</zil-tile-title>
+      <zil-tile-content zilLineChart [options]="(marketCharts$ | async)?.dsMiningDifficulty"></zil-tile-content>
+    </zil-tile>
+  </dg-grid-cell>
+
+  <dg-grid-cell column-span="12">
+    <zil-tile>
+      <zil-tile-title>ZIL USD Price</zil-tile-title>
+      <zil-tile-content zilLineChart [options]="(marketCharts$ | async)?.zilPrice"></zil-tile-content>
     </zil-tile>
   </dg-grid-cell>
 
