ZIL-27: Added shard check

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,4 +13,9 @@
     <mat-icon matListIcon>swap_horiz</mat-icon>
     <span matLine>Transactions</span>
   </mat-list-item>
+
+  <mat-list-item routerLink="shard-check">
+    <mat-icon matListIcon>check_circle_outline</mat-icon>
+    <span matLine>Shard Check</span>
+  </mat-list-item>
 </mat-nav-list>
