--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,41 +1,34 @@
-<dg-grid>
-  <dg-grid-cell column-span="12">
-    <dg-row alignment="center">
-      <a mat-mini-fab color="primary" href="https://zilliqa.com">
-        <mat-icon fontSet="fas" fontIcon="fa-link"></mat-icon>
-      </a>
+<zil-card>
+  <zil-card-content>
+    <dg-row class="content" alignment="space-evenly">
+      <div class="mat-small">Zilliqa Explorer is a Block Explorer and Analytics Platform for Zilliqa, a decentralized smart contracts platform.</div>
 
-      <a mat-mini-fab color="primary" href="https://blog.zilliqa.com">
-        <mat-icon fontSet="fab" fontIcon="fa-blogger-b"></mat-icon>
-      </a>
+      <mat-divider vertical></mat-divider>
 
-      <a mat-mini-fab color="primary" href="https://twitter.com/zilliqa">
-        <mat-icon fontSet="fab" fontIcon="fa-twitter"></mat-icon>
-      </a>
+      <div>
+        <div class="mat-body-2">Links</div>
+        <div><zil-link href="https://zilliqa.com">Official Site</zil-link></div>
+        <div><zil-link href="https://blog.zilliqa.com">Blog</zil-link></div>
+      </div>
 
-      <a mat-mini-fab color="primary" href="https://t.me/zilliqachat">
-        <mat-icon fontSet="fab" fontIcon="fa-telegram-plane"></mat-icon>
-      </a>
+      <mat-divider vertical></mat-divider>
 
-      <a mat-mini-fab color="primary" href="https://www.reddit.com/r/zilliqa">
-        <mat-icon fontSet="fab" fontIcon="fa-reddit-alien"></mat-icon>
-      </a>
+      <div>
+        <div class="mat-body-2">Social</div>
+        <div><zil-link href="https://twitter.com/zilliqa">Twitter</zil-link></div>
+        <div><zil-link href="https://t.me/zilliqachat">Telegram</zil-link></div>
+        <div><zil-link href="https://www.reddit.com/r/zilliqa">Reddit</zil-link></div>
+        <div><zil-link href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ">YouTube</zil-link></div>
+      </div>
 
-      <a mat-mini-fab color="primary" href="https://www.youtube.com/channel/UCvinnFbf0u71cajoxKcfZIQ">
-        <mat-icon fontSet="fab" fontIcon="fa-youtube"></mat-icon>
-      </a>
+      <mat-divider vertical></mat-divider>
 
-      <a mat-mini-fab color="primary" href="https://github.com/Zilliqa">
-        <mat-icon fontSet="fab" fontIcon="fa-github"></mat-icon>
-      </a>
-
-      <a mat-mini-fab color="primary" href="https://invite.zilliqa.com">
-        <mat-icon fontSet="fab" fontIcon="fa-slack"></mat-icon>
-      </a>
-
-      <a mat-mini-fab color="primary" href="https://gitter.im/Zilliqa">
-        <mat-icon fontSet="fab" fontIcon="fa-gitter"></mat-icon>
-      </a>
+      <div>
+        <div class="mat-body-2">For Developers</div>
+        <div><zil-link href="https://github.com/Zilliqa">GitHub</zil-link></div>
+        <div><zil-link href="https://invite.zilliqa.com">Slack</zil-link></div>
+        <div><zil-link href="https://gitter.im/Zilliqa">Gitter</zil-link></div>
+      </div>
     </dg-row>
-  </dg-grid-cell>
-</dg-grid>
+  </zil-card-content>
+</zil-card>
