--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,4 @@
-<dg-grid container>
-  <dg-grid-cell column-span="12">
-    <dg-row alignment="space-between">
-      <app-logo></app-logo>
-      <app-search-bar></app-search-bar>
-    </dg-row>
-  </dg-grid-cell>
-</dg-grid>
+<dg-row container alignment="space-between">
+  <app-logo></app-logo>
+  <app-search-bar></app-search-bar>
+</dg-row>
