--- a/src/app/components/outlet/outlet.component.scss
+++ b/src/app/components/outlet/outlet.component.scss
@@ -1,11 +1,9 @@
 @import '~@datagazer/ui';
 
 :host {
-  @include dg-column();
+  padding: map-get($default-gutter, large) 0 0;
 
-  place: {
-    content: start stretch;
+  overflow: {
+    y: auto;
   }
-
-  padding: map-get($default-gutter, large) 0;
 }
