--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,1 +1,4 @@
-<img src="assets/logo.png" alt="">
+<dg-row >
+  <img src="assets/logo.png" alt="">
+  <dg-heading level="headline">Zilliqa Explorer</dg-heading>
+</dg-row>
