Added history charts

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,11 @@
     <span matLine>Transactions</span>
   </mat-list-item>
 
+  <mat-list-item routerLink="history">
+    <mat-icon matListIcon>history</mat-icon>
+    <span matLine>History</span>
+  </mat-list-item>
+
   <mat-list-item routerLink="shard-check">
     <mat-icon matListIcon>check_circle_outline</mat-icon>
     <span matLine>Shard Check</span>
