Add address to smart contract detail Fix loading screen

--- a/src/app/scenes/smart-contract-detail/smart-contract-detail.component.html
+++ b/src/app/scenes/smart-contract-detail/smart-contract-detail.component.html
@@ -1,5 +1,10 @@
 <zil-card>
   <zil-card-content>
+    <mat-form-field>
+      <mat-label>Address</mat-label>
+      <input matInput value="{{ address }}" readonly>
+    </mat-form-field>
+
     <mat-table [dataSource]="smartContract">
       <ng-container matColumnDef="vname">
         <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
