Fix property names

--- a/src/app/scenes/ds-block-detail/ds-block-detail.component.html
+++ b/src/app/scenes/ds-block-detail/ds-block-detail.component.html
@@ -2,27 +2,27 @@
   <zil-card-content>
     <mat-form-field>
       <mat-label>Block #</mat-label>
-      <input matInput value="{{ dsBlock.header.blockNum }}" readonly>
+      <input matInput value="{{ dsBlock.header.BlockNum }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Difficulty</mat-label>
-      <input matInput value="{{ dsBlock.header.difficulty }}" readonly>
+      <input matInput value="{{ dsBlock.header.Difficulty }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Leader Public Key</mat-label>
-      <input matInput value="{{ dsBlock.header.leaderPubKey }}" readonly>
+      <input matInput value="{{ dsBlock.header.LeaderPubKey }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Previous Hash</mat-label>
-      <input matInput value="{{ dsBlock.header.prevhash }}" readonly>
+      <input matInput value="{{ dsBlock.header.PrevHash }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Timestamp</mat-label>
-      <input matInput value="{{ dsBlock.header.timestamp }}" readonly>
+      <input matInput value="{{ dsBlock.header.Timestamp }}" readonly>
     </mat-form-field>
 
     <mat-form-field>
